<resources>
    <string name="app_name">ReCam</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_camera">Camera</string>
    <string name="title_settings">Settings</string>
    <string name="perubahan_iklim_kian_berbahaya" translatable="false">Perubahan iklim kian berbahaya</string>
    <string name="ganti_gambar">Change Image</string>
    <string name="ubah_bahasa">Change Language</string>
    <string name="mode_gelap">Dark Mode</string>
    <string name="tentang">About</string>
    <string name="keluar">Logout</string>
    <string name="selamat_datang">Welcome,</string>
    <string name="featured">Featured</string>
    <string name="lihat_semua">More</string>
    <string name="kategori">Category</string>
    <string name="plastik">Plastic</string>
    <string name="logam">Metal</string>
    <string name="glass">Glass</string>
    <string name="artikel">Article</string>
    <string name="lebih_banyak">More</string>
    <string name="txt_login">Login</string>
    <string name="pilih_gambar">Choose Image</string>
    <string name="lanjut">Next</string>
    <string name="galeri">Galery</string>
    <string name="kamera">Camera</string>
    <string name="version">Version</string>
    <string name="cardboard">Cardboard</string>
    <string name="paper">Paper</string>
    <string name="queryHint">Plastik, Kaca, more..</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="recam" translatable="false">ReCam</string>
    <string name="hi_welcome_to">Hi, Welcome to</string>
    <string name="ask_register">Don\'t have an account?</string>
    <string name="hello_blank_fragment">Choose image</string>
    <string name="or_login_with">OR</string>
    <string name="register_hint">Please complete the following data to register.</string>
    <string name="recommendation" translatable="false">Recommendation</string>
    <string name="name_of_creativity" translatable="false">Name of Creativity</string>
    <string name="ingredients" translatable="false">ingredients</string>
    <string name="name_of_ingredients" translatable="false">Name of Ingredients</string>
    <string name="login_hint">To start using ReCam, please login first.</string>
    <string name="open_terms_condition">By login you agree to the <a href="https://sites.google.com/view/dhandeveloper/">Terms and Conditions</a></string>
    <string name="login_with_social_networks">Login with Social Networks</string>
    <string name="Cancel">Cancel</string>
    <string name="desc_logout">%1$s, Are you sure to logout?</string>
    <string name="ideas_from">Craft ideas from %1$s</string>
    <string name="choose_image">Choose Image</string>
    <string name="tools_materials">Tools and Materials</string>
    <string name="procedures">Procedures</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="not_detected">Sorry, I\'m not smart enough yet</string>
</resources>