<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/world"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_welcome_to"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recam"
        android:textColor="@color/green_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="327dp"
        android:layout_height="34dp"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/inp_name"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_smaller"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/name"
        android:inputType="textWebEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

    <EditText
        android:id="@+id/inp_email"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_smaller"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_name"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />


    <EditText
        android:id="@+id/inp_password"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_smaller"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_email"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_smaller"
        android:backgroundTint="@color/abu"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_password"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>