<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/rounded_corner_bawah"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/title_settings"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ganti"
        android:text="@string/ubah_bahasa"
        android:drawableStart="@drawable/ic_baseline_g_translate_24"
        style="@style/switchBtn"
        android:backgroundTint="?attr/colorSurface"
        android:paddingHorizontal="10dp"
        android:drawableTint="?android:attr/textColorPrimary"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="20dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_theme"
        android:text="@string/mode_gelap"
        android:drawableStart="@drawable/ic_baseline_dark_mode_24"
        style="@style/switchBtn"
        android:backgroundTint="?attr/colorSurface"
        android:paddingHorizontal="10dp"
        android:drawableTint="?android:attr/textColorPrimary"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="20dp"/>

<!--    <TextView-->
<!--        android:id="@+id/tentang"-->
<!--        android:drawableLeft="@drawable/ic_baseline_info_24"-->
<!--        android:text="@string/tentang"-->
<!--        android:textColor="?android:attr/textColorPrimary"-->
<!--        style="@style/switchBtn"-->
<!--        android:backgroundTint="?attr/colorSurface"-->
<!--        android:paddingHorizontal="10dp"-->
<!--        android:drawableTint="?android:attr/textColorPrimary"-->
<!--        android:layout_marginHorizontal="20dp"-->
<!--        android:paddingVertical="20dp"/>-->

    <TextView
        android:id="@+id/keluar"
        android:drawableLeft="@drawable/ic_baseline_logout_24"
        android:text="@string/keluar"
        android:textColor="@color/white"
        style="@style/switchBtn"
        android:backgroundTint="@color/red"
        android:paddingHorizontal="10dp"
        android:drawableTint="@color/white"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="20dp"/>
</LinearLayout>