<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green1"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="408dp"
        android:layout_height="215dp"
        android:scaleType="fitXY"
        android:src="@drawable/rope_lampshade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="327dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner_smaller"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_smaller"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/button"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_smaller"
        android:backgroundTint="@color/abu"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="139dp"
        android:layout_height="19dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/ask_register"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="57dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/daftar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>