<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.ResultCameraActivity">

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner_smaller"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_gambar"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/arrowBack"
        app:layout_constraintStart_toEndOf="@+id/arrowBack"
        app:layout_constraintTop_toTopOf="@id/arrowBack" />

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_baseline_image_24" />

    <LinearLayout
        android:id="@+id/reTake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnLanjut">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnKamera"
            style="?attr/materialButtonOutlinedStyle"
            app:cornerRadius="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="10dp"
            android:text="@string/kamera"
            app:layout_constraintBottom_toTopOf="@+id/btnLanjut" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGaleri"
            style="?attr/materialButtonOutlinedStyle"
            app:cornerRadius="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:text="@string/galeri"
            app:layout_constraintBottom_toTopOf="@+id/btnLanjut" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLanjut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/lanjut"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="@+id/previewImage"/>
</androidx.constraintlayout.widget.ConstraintLayout>