<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/rounded_corner_bawah"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:text="@string/selamat_datang"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="ReCam Team"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            tools:background="@drawable/rounded_corner"
            app:layout_constraintBottom_toBottomOf="@+id/userName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner"
            app:queryBackground="@null"
            android:backgroundTint="?android:attr/colorBackground"
            app:iconifiedByDefault="false"
            app:queryHint="@string/queryHint"
            android:textSize="14sp"
            android:elevation="5dp"
            android:transitionName="search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/featured"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginVertical="5dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/introHome"
                    android:layout_width="166dp"
                    android:layout_height="166dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/potkaleng"
                    android:gravity="start|bottom"
                    android:elevation="5dp"
                    android:padding="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="166dp"
                    android:layout_height="166dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/potboots"
                    android:singleLine="true"
                    android:gravity="start|bottom"
                    android:elevation="5dp"
                    android:padding="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="166dp"
                    android:layout_height="166dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/packing"
                    android:singleLine="true"
                    android:gravity="start|bottom"
                    android:elevation="5dp"
                    android:padding="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/Kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/kategori"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <LinearLayout
            android:id="@+id/linearKategori"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/Kategori"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp">
            <TextView
                android:id="@+id/plastik"
                style="@style/kategori"
                android:background="@drawable/plastic"
                android:text="@string/plastik"/>
            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/logam"
                style="@style/kategori"
                android:background="@drawable/metal"
                android:text="@string/logam"/>
            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/kayu"
                style="@style/kategori"
                android:background="@drawable/wood"
                android:text="@string/kayu"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearKategori2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linearKategori"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp">
            <TextView
                android:id="@+id/cardboard"
                style="@style/kategori"
                android:background="@drawable/cardboard"
                android:text="@string/cardboard"/>
            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/paper"
                style="@style/kategori"
                android:background="@drawable/paper"
                android:text="@string/paper"/>
            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/none"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvArtikel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/artikel"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearKategori2" />

        <TextView
            android:id="@+id/seeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/lebih_banyak"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvArtikel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvArtikel"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            />

        <com.faltenreich.skeletonlayout.SkeletonLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/skeletonLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvArtikel"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/article"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.faltenreich.skeletonlayout.SkeletonLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>